--- a/LKmaytinh/Views/Admin/_layout.cshtml
+++ b/LKmaytinh/Views/Admin/_layout.cshtml
@@ -10,7 +10,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <input type="text">
+    <input type="text" value="search">
     <title>@ViewBag.Title</title>
     <link href="~/Content/CssHome/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!--jQuery(necessary for Bootstrap's JavaScript plugins)-->
