--- a/LKmaytinh/Views/MayTinh/DangKy.cshtml
+++ b/LKmaytinh/Views/MayTinh/DangKy.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "DangKy";
     Layout = "~/Views/LayOut/NguoiDungLayout.cshtml";
 }
-
+//dang ky
 <div class="row" style="text-align:center">
     <h2>Đăng Ký</h2>
 </div>
